--- a/JavaScript/The Secret of JavaScript Ninja/code/index.html
+++ b/JavaScript/The Secret of JavaScript Ninja/code/index.html
@@ -7,7 +7,8 @@
 	</head>
 	<body>
 		<div id="results"></div>
-		<div id="div"></div>
+		<div class="div">one</div> 
+		<div class="div">two</div>
 		<button id="testButton">Click</button>
 		<script type="text/javascript" src="jquery.js"></script>
 		<script type="text/javascript" src="index.js"></script>
